# RISC-V-Simulator

./: .clang-format  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.tours/: simulator.tour  turbo_assembler.tour
executable/: CMakeLists.txt  test_program.cpp
include/assembler/: assembler.hpp  immediate.hpp  instruction.hpp  label.hpp  operand.hpp  register.hpp  register_displacement.hpp
include/cpu/: cpu_impl.hpp  executor..hpp  simulator.hpp  state.hpp  state_data.hpp
include/cpu/decoder/: connection_info.hpp  decoder.hpp  i_instr.hpp  instruction_type.hpp  r_instr.hpp  s_instr.hpp  sb_instr.hpp  u_instr.hpp  uj_instr.hpp
include/memory/: cache.hpp  cache_block.hpp  common_enums.hpp  fifo_evictor.hpp  lru_evictor.hpp  main_memory.hpp  memory_manager.hpp  random_evictor.hpp
test/: CMakeLists.txt
test/assembler/: CMakeLists.txt  assembler.cpp  immediate.cpp  instruction.cpp  label.cpp  register.cpp  register_displacement_operand.cpp
test/cpu/: cpu.cpp  decoder.cpp  executor.cpp
test/memory/: cache.cpp  cache_block.cpp  memory.cpp
test/test_files/: cpu_sample1.s  cpu_sample2.s  cpu_sample3.s  cpu_sample4.s  cpu_sample5.s  cpu_sample6.s  cpu_sample7.s  cpu_sample8.s  cpu_sample9.s  sample1.s  sample2.s  sample3.s  sample9.s  ssample9.s
